tests/diagnostics/tests/ui/missing_from.stderr
error[E0277]: recipe content `u32` can't bake back into `Cow<'static, str>`
  --> tests/ui/missing_from.rs:10:20
   |
10 |     type Content = u32;
   |                    ^^^ try using `BakeFrom<u32>`
   |
   = help: the trait `BakeInto<Cow<'static, str>>` is not implemented for `u32`
   = note: for non-foreign types, consider providing a conversion by implementing `From<u32>` for `Cow<'static, str>`
note: required by a bound in `granola::html::PTag::Content`
  --> $WORKSPACE/crates/granola/src/html/elements/text_content/p.rs
   |
   | #[derive(Debug, Clone, Default, Template, Granola, Recipe)]
   |                                                    ^^^^^^ required by this bound in `PTag::Content`
   = note: this error originates in the derive macro `Recipe` (in Nightly builds, run with -Z macro-backtrace for more info)
